@@ -1,3 +1,9 @@
+2020-02-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/25355
+	* plugin.c (plugin_list_entry): Remove handle.
+	(try_load_plugin): Call dlclose before return.
+
 2020-02-14  Nick Clifton  <nickc@redhat.com>
 
 	Import from mainline:
